--- a/src/content/docs/reference/Uniforms/camera.mdx
+++ b/src/content/docs/reference/Uniforms/camera.mdx
@@ -5,9 +5,11 @@ sidebar:
   label: Camera/Player
   order: 1
 ---
+import { Badge } from '@astrojs/starlight/components';
 
 
 ## cameraPosition
+**Supported Versions:** All Optifine/Iris
 ```glsl
 uniform vec3 cameraPosition;
 ```
@@ -21,6 +23,7 @@ For more information on spaces, visit this [how to article](/how_to/spaces) on t
 
 
 ## eyeAltitude
+**Supported Versions:** All Optifine/Iris
 ```glsl
 uniform float eyeAltitude;
 ```
@@ -29,7 +32,7 @@ This uniform stores the float value of the altitude of the player, stored in blo
 ----------------
 
 
-## cameraPositionFract
+## cameraPositionFract <Badge text="Iris Exclusive" variant="tip" size="medium" />
 ```glsl
 uniform vec3 cameraPositionFract;
 ```
@@ -38,7 +41,8 @@ This uniform stores the fractional component (`0` to `1`) of the position of the
 ----------------
 
 
-## cameraPositionInt
+## cameraPositionInt <Badge text="Iris Exclusive" variant="tip" size="medium" />
+**Supported Versions:** Iris Only
 ```glsl
 uniform ivec3 cameraPositionInt;
 ```
@@ -48,6 +52,7 @@ This uniform stores the integer component (truncated value) of the position of t
 
 
 ## previousCameraPosition
+**Supported Versions:** All Optifine/Iris
 ```glsl
 uniform vec3 previousCameraPosition;
 ```
@@ -56,7 +61,8 @@ This value is the [`cameraPosition`](/reference/uniforms/camera#cameraposition) 
 ----------------
 
 
-## previousCameraPositionFract
+## previousCameraPositionFract <Badge text="Iris Exclusive" variant="tip" size="medium" />
+**Supported Versions:** Iris Only
 ```glsl
 uniform vec3 previousCameraPositionFract;
 ```
@@ -65,7 +71,8 @@ This value is the [`cameraPositionFract`](/reference/uniforms/camera#cameraposit
 ----------------
 
 
-## previousCameraPositionInt
+## previousCameraPositionInt <Badge text="Iris Exclusive" variant="tip" size="medium" />
+**Supported Versions:** Iris Only
 ```glsl
 uniform ivec3 previousCameraPositionInt;
 ```
@@ -74,7 +81,8 @@ This value is the [`cameraPositionInt`](/reference/uniforms/camera#camerapositio
 ----------------
 
 
-## eyePosition
+## eyePosition <Badge text="Iris Exclusive" variant="tip" size="medium" />
+**Supported Versions:** Iris Only
 ```glsl
 uniform vec3 eyePosition;
 ```
@@ -83,7 +91,8 @@ This value stores the world space position of the player's head model. When in f
 ----------------
 
 
-## relativeEyePosition
+## relativeEyePosition <Badge text="Iris Exclusive" variant="tip" size="medium" />
+**Supported Versions:** Iris Only
 ```glsl
 uniform vec3 relativeEyePosition;
 ```
@@ -92,7 +101,8 @@ This value stores the world space offset from the player model's head position t
 ----------------
 
 
-## playerBodyVector
+## playerBodyVector <Badge text="Iris Exclusive" variant="tip" size="medium" />
+**Supported Versions:** Iris Only
 ```glsl
 uniform vec3 playerBodyVector;
 ```
@@ -101,7 +111,8 @@ This value is intended to store the world aligned direction the player model's b
 ----------------
 
 
-## playerLookVector
+## playerLookVector <Badge text="Iris Exclusive" variant="tip" size="medium" />
+**Supported Versions:** Iris Only
 ```glsl
 uniform vec3 playerLookVector;
 ```
@@ -111,6 +122,7 @@ This value stores the world aligned direction the player model's head is facing.
 
 
 ## upPosition
+**Supported Versions:** All Optifine/Iris
 ```glsl
 uniform vec3 upPosition;
 ```
@@ -120,6 +132,7 @@ This uniform stores the vector pointing upwards (in the world) in [view space](/
 
 
 ## centerDepthSmooth
+**Supported Versions:** All Optifine/Iris
 ```glsl
 uniform float centerDepthSmooth;
 ```
@@ -129,6 +142,7 @@ This uniform stores the value in the depth buffer `depthtex0` at the center of t
 
 
 ## firstPersonCamera
+**Supported Versions:** Iris Only
 ```glsl
 uniform bool firstPersonCamera;
 ```
